// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should be rendered correctly 1`] = `
<div
  className="container uui-button-box uui-enabled -clickable root size-36 color-sky fill-solid style-square"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="uui-caption line-height-24 font-size-14 v-padding-5"
  >
    Test
  </div>
  <div
    className="container uui-icon uui-enabled"
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#folding-arrow-18.svg"
      />
    </svg>
  </div>
</div>
`;

exports[`Dropdown should be rendered correctly with extra props 1`] = `
<div
  className="container uui-button-box uui-enabled -clickable root size-36 color-sky fill-solid style-square"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="uui-caption line-height-24 font-size-14 v-padding-5"
  >
    test
  </div>
  <div
    className="container uui-icon uui-enabled"
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#folding-arrow-18.svg"
      />
    </svg>
  </div>
</div>
`;
